--- a/init.org
+++ b/init.org
@@ -6,7 +6,7 @@
 ** Table of contents :TOC_4_gh:
 - [[#configure-all-the-emacs][Configure all the Emacs!]]
   - [[#package-manager][Package manager]]
-    - [[#bootstrap-code-for-the-package-manager---straightel][Bootstrap code for the package manager - ~straight.el~]]
+    - [[#bootstrap-code-for-the-package-manager---straightel][Bootstrap code for the package manager - =straight.el=]]
     - [[#install-use-package-for-sane-package-configuration][Install use-package for sane package configuration]]
     - [[#ensure-system-packages-to-check-they-exist][Ensure system packages to check they exist]]
   - [[#general-configs][General configs]]
@@ -27,11 +27,9 @@
     - [[#display-battery-in-the-bar][Display battery in the bar]]
     - [[#display-time-in-the-bar][Display time in the bar]]
     - [[#use-spaces-instead-of-tabs][Use spaces instead of tabs]]
-    - [[#commenting][Commenting]]
     - [[#command-log-mode][Command log mode]]
     - [[#which-key][Which-key]]
     - [[#undo-magic][Undo magic]]
-    - [[#buffer-display][Buffer display]]
     - [[#delete-unnecessary-whitespace][Delete unnecessary whitespace]]
     - [[#restart-emacs-from-within-emacs][Restart emacs from within emacs]]
     - [[#better-yesno-prompts][Better yes/no prompts]]
@@ -42,7 +40,6 @@
     - [[#highlight-current-line][Highlight current line]]
     - [[#global-revert-mode][Global revert mode]]
     - [[#set-warning-level-to-error][Set warning level to error]]
-  - [[#terminal-emulator][Terminal emulator]]
   - [[#modeline][Modeline]]
   - [[#random-quote-for-dashboard][Random quote for dashboard]]
   - [[#dashboard][Dashboard]]
@@ -80,12 +77,12 @@
     - [[#evil-mode-configs][Evil mode configs]]
     - [[#org-mode-integration-with-evil][Org mode integration with evil]]
     - [[#evil-collection-mode][Evil collection mode]]
+    - [[#commenting][Commenting]]
   - [[#eshell][Eshell]]
   - [[#magit][Magit]]
   - [[#counsel][Counsel]]
   - [[#ivy][Ivy]]
   - [[#company][Company]]
-  - [[#snippets][Snippets]]
   - [[#how-do-you][How-do-you]]
   - [[#language-specific][Language-specific]]
     - [[#web-mode][Web-mode]]
@@ -123,17 +120,15 @@
   - [[#ielm][Ielm]]
   - [[#tramp][Tramp]]
   - [[#direnv][Direnv]]
-  - [[#cheatsheet][Cheatsheet]]
   - [[#demo-it][Demo it]]
-  - [[#graph-bar][Graph bar]]
-  - [[#snippets-1][Snippets]]
+  - [[#snippets][Snippets]]
   - [[#crux][Crux]]
   - [[#neuron-mode][Neuron mode]]
   - [[#ripgrep][Ripgrep]]
 
 ** Package manager
-Must be in the beginning for ~use-package~ usage below.
-*** Bootstrap code for the package manager - ~straight.el~
+Must be in the beginning for =use-package= usage below.
+*** Bootstrap code for the package manager - =straight.el=
 #+begin_src elisp
 (defvar bootstrap-version)
 (let ((bootstrap-file
@@ -317,17 +312,9 @@ General keybindings
       `((".*" ,(no-littering-expand-var-file-name "auto-save/") t)))
 #+end_src
 *** Set the default font
-This is seriously retarded.
 #+begin_src elisp
 (add-to-list 'default-frame-alist '(font . "mononoki Nerd Font Mono 18"))
-;; (if (eq system-type 'gnu/linux)
-;;   ;;(set-frame-font "Jet Brains Mono 18")
-;;   (set-frame-font "mononoki Nerd Font Mono 18")
-;;   (set-frame-font "JetBrains Mono 18"))
 #+end_src
-
-#+RESULTS:
-
 *** Set the theme
 **** Doom emacs themes
 #+begin_src elisp
@@ -387,13 +374,6 @@ This is seriously retarded.
 #+begin_src elisp
 (setq-default indent-tabs-mode nil)
 #+end_src
-*** Commenting
-#+begin_src elisp
-(use-package evil-nerd-commenter
-  :straight t
-  :config
-  (evilnc-default-hotkeys))
-#+end_src
 *** Command log mode
 Show command history in sidebar. Looks slick. Works good for demos and stuff.
 #+begin_src elisp
@@ -414,22 +394,6 @@ Showing a popup for key combinations that follow the pressed key (like in Spacem
   :straight t
   :init
   (global-undo-tree-mode))
-#+end_src
-*** Buffer display
-When running ~display-buffer~, will show the ~*Emacs Log*~ buffer on the right side of the window
-Here for informational purposes.
-#+begin_src elisp
-;; (setq display-buffer-alist
-;;   `(;; Messages, errors, processes, Calendar in the bottom side window
-;;      (,(rx bos (or "*Emacs Log*"))  ; interaction log *Emacs Log*
-;;        (display-buffer-reuse-window display-buffer-in-side-window)
-;;        (side . right)
-;;        (reusable-frames . visible)
-;;        (window-height . 0.45))
-;;        ;; Let `display-buffer' reuse visible frames for all buffers. This must
-;;        ;; be the last entry in `display-buffer-alist', because it overrides any
-;;        ;; previous entry with more actions.
-;;      ("." nil (reusable-frames . visible))))
 #+end_src
 *** Delete unnecessary whitespace
 #+begin_src elisp
@@ -484,16 +448,9 @@ Revert buffers automatically when they change on disk.
 (global-auto-revert-mode 1)
 #+end_src
 *** Set warning level to error
+This is mostly for when I tried to compile the gcc native comp branch for Emacs.
 #+begin_src elisp
 (setq warning-minimum-level :error)
-#+end_src
-** Terminal emulator
-Also requires =libtool-bin= and =libvterm= (=libvterm-dev= on Ubuntu)
-Not using for now, doesn't work on Manjaro (cannot find libvterm even though it's installed).
-#+begin_src elisp
-;; (use-package vterm
-;;   :ensure-system-package cmake
-;;   :straight t)
 #+end_src
 ** Modeline
 Doom modeline - it looks nice!
@@ -571,7 +528,7 @@ Ok I admit this is a little bloated, but I like something pretty to open when I 
 ** Org-mode
 *** General
 Installing and configuring org-mode:
-1. Use ~org-tempo~ for easier inserting of structure templates
+1. Use =org-tempo= for easier inserting of structure templates
    (e.g. using <s TAB for inserting code blocks)
 2. Set refile targets to my various GTD files
 3. Set capture templates
@@ -1285,6 +1242,13 @@ Sets up various other emacs modes with evil-mode bindings
   :config
   (evil-collection-init))
 #+end_src
+*** Commenting
+#+begin_src elisp
+(use-package evil-nerd-commenter
+  :straight t
+  :config
+  (evilnc-default-hotkeys))
+#+end_src
 ** Eshell
 The Emacs shell.
 Autojump for eshell to go to most visited directories
@@ -1405,20 +1369,6 @@ Complete all the things!
   :straight t
   :hook
   (after-init . global-company-mode))
-#+end_src
-** Snippets
-Don't have a use for this at the moment really, it's only making my emacs startup slower and I'm not even using it. Commenting it out for now.
-#+begin_src elisp
-;; (use-package yasnippet
-;;   :straight t
-;;   :custom
-;;   (yas-also-auto-indent-first-line t)
-;;   (yas-also-indent-empty-lines t)
-;;   :config
-;;   (yas-global-mode t))
-
-;; (use-package yasnippet-snippets
-;;   :straight t)
 #+end_src
 ** How-do-you
 Your stack overflow and friends inside emacs (and the results are org files!)
@@ -2091,75 +2041,6 @@ For using direnv inside emacs.
   (direnv-mode))
 #+end_src
 
-** Cheatsheet
-#+begin_src elisp
-(use-package cheatsheet
-  :straight t
-  :config
-  (my/leader-keys
-    "ch" 'cheatsheet-show)
-
-  (cheatsheet-add-group 'Cheatsheet
-                        '(:key "SPC c h" :description "Show cheatsheet")
-                        '(:key "C-q"     :description "Close cheatsheet buffer"))
-
-  (cheatsheet-add-group 'GTD
-                        '(:key "SPC g g" :description "Open gtd.org")
-                        '(:key "SPC g t" :description "Open tickler.org")
-                        '(:key "SPC g i" :description "Open inbox.org")
-                        '(:key "SPC g h" :description "Open hobbies.org")
-                        '(:key "SPC g u" :description "Open ukulele.org")
-                        '(:key "SPC g s" :description "Open someday.org")
-                        '(:key "SPC g d" :description "Open daily_reviews.org")
-                        '(:key "SPC g w" :description "Open weekly_reviews.org")
-                        '(:key "SPC g m" :description "Open monthly_reviews.org"))
-
-  (cheatsheet-add-group 'Projects
-                        '(:key "SPC p p"   :description "Select project")
-                        '(:key "SPC p f"   :description "Find file in project")
-                        '(:key "SPC p x e" :description "Open eshell in project root")
-                        '(:key "SPC p D"   :description "Open dired in project root")
-                        '(:key "SPC p k"   :description "Kill all project buffers")
-                        '(:key "SPC p a"   :description "Add new project to projectile")
-                        '(:key "SPC p r"   :description "Remove project from projectile")
-                        '(:key "SPC p S"   :description "Save all project buffers")
-                        '(:key "SPC o p g" :description "Select project todos to open"))
-
-  (cheatsheet-add-group 'Org
-                        '(:key "SPC m t"   :description "Change org todo state")
-                        '(:key "SPC m s"   :description "Schedule an org todo heading")
-                        '(:key "SPC m d"   :description "Make a deadline for an org todo heading")
-                        '(:key "SPC o a a" :description "Open org agenda")
-                        '(:key "SPC o c i" :description "Clock into task")
-                        '(:key "SPC o c o" :description "Clock out of task")
-                        '(:key "SPC o c l" :description "Clock into last clocked task")
-                        '(:key "SPC o c g" :description "Go to currently clocked task")
-                        '(:key "SPC o o"   :description "Org open link at point")
-                        '(:key "SPC o g"   :description "Search through headings in an org file")
-                        '(:key "SPC o d"   :description "Decrypt org file")
-                        '(:key "SPC o r"   :description "Refile heading in org file")
-                        '(:key "SPC o s"   :description "Archive heading in org file")
-                        '(:key "SPC o w i" :description "Org wiki index")
-                        '(:key "SPC o w c" :description "Close all org wiki buffers")
-                        '(:key "SPC o w h" :description "Helm search through org wiki file names")
-                        '(:key "SPC o w l" :description "Insert link into an org wiki file to another org wiki file")
-                        '(:key "SPC o w n" :description "Insert a link to and create a new org wiki file")
-                        '(:key "SPC o w N" :description "Create a new org wiki file without inserting a link to it")
-                        '(:key "SPC o w g" :description "Grep through the wiki directory inside Emacs")
-                        '(:key "SPC o t u" :description "Bump up org timestamp by a day")
-                        '(:key "SPC o t d" :description "Down org timestamp by a day")
-                        '(:key "SPC o t l" :description "Toggle link display in org mode (shows what stuff is linked to)")
-                        '(:key "SPC o v m" :description "Open custom reddit reddigg main screen")
-                        '(:key "SPC o v s" :description "Open specific sub reddit with reddigg")
-                        '(:key "SPC n f"   :description "Find a file in org roam")
-                        '(:key "SPC n i"   :description "Insert a link to a file in an org roam file and open it. Creates a backlink")
-                        '(:key "SPC n I"   :description "Insert a link to a new file in an org roam file but don't open it. Creates a backlink")
-                        '(:key "SPC n l"   :description "Open org roam backlinks sidebuffer")
-                        '(:key "SPC n o"   :description "Capture a new org roam daily entry")
-                        '(:key "SPC n t"   :description "Go to today's daily file in org roam")
-                        '(:key "SPC n y"   :description "Go to yesterday's daily file in org roam")))
-#+end_src
-
 ** Demo it
 Interesting collection of functions for performing demos and presentations in steps, programatically.
 #+begin_src elisp
@@ -2168,12 +2049,6 @@ Interesting collection of functions for performing demos and presentations in st
   :config
   (my/leader-keys
      "des" 'demo-it-step))
-#+end_src
-
-** Graph bar
-#+begin_src elisp
-(use-package neato-graph-bar
-  :straight t)
 #+end_src
 
 ** Snippets
