--- a/init.org
+++ b/init.org
@@ -269,7 +269,11 @@ General keybindings
     "xk"  'kill-buffer
     "xs"  '(:ignore t :which-key "split-window")
     "xsr" 'split-window-right
-    "xsb" 'split-window-below))
+    "xsb" 'split-window-below
+
+    "ks" 'kill-sexp
+    "fs" 'forward-sexp
+    "bs" 'backward-sexp))
 #+end_src
 *** Custom vars file, so it doesn't pollute the init file
 #+begin_src elisp
@@ -1681,6 +1685,7 @@ Interaction with mix
   (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
   (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
   (setq projectile-track-known-projects-automatically nil)
+  (setq projectile-indexing-method 'native)
 
   (my/leader-keys
     "p"   '(:ignore t :which-key "projectile")
@@ -1713,7 +1718,6 @@ Automatic paren completion and visualization, and other nifty things
   (smartparens-global-mode)
   (show-smartparens-global-mode))
 #+end_src
-
 ** Flycheck
 For all the errors in the world
 #+begin_src elisp
@@ -2184,8 +2188,7 @@ Hacky hacky hacky
       '(("d" "default" entry
          "* %<%H:%M> :crypt: %?"
          :if-new (file+head "journal.daily.%<%Y-%m-%d>.org"
-                            "#+title: %<%Y-%m-%d>\n")
-         :olp ("Journal"))))
+                            "#+title: %<%Y-%m-%d>\n"))))
   (setq dendroam-capture-templates
       '(("t" "Time note" entry
          "* %?"
@@ -2216,5 +2219,3 @@ Hacky hacky hacky
 
 (my/org-roam-load)
 #+end_src
-
-#+RESULTS:
