Remove hardcoded path to mbsync

--- a/init.org
+++ b/init.org
@@ -1809,7 +1809,7 @@ To read / sync email in emacs. Using this only on home computers.
     "em"  'mu4e)
 
   (setq mu4e-sent-messages-behaviour 'delete)
-  (setq mu4e-get-mail-command "/usr/bin/mbsync -Va")
+  (setq mu4e-get-mail-command "$(which mbsync) -Va")
   (setq mu4e-change-filenames-when-moving t)
   (setq mu4e-update-interval 300)
   (setq mu4e-use-fancy-chars t)
@@ -1865,6 +1865,9 @@ To read / sync email in emacs. Using this only on home computers.
 
   (mu4e t))
 #+end_src
+
+#+RESULTS:
+: t
 
 Alerts for emails
 
