Sync, add some stuff, change capture templates

--- a/init.org
+++ b/init.org
@@ -709,16 +709,16 @@ Disable line numbers in org-mode
       (file my/create-notes-file)
       (file "~/Nextcloud/org/templates/neuron_literature_note.org"))
       ("t" "Todo [inbox]" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Inbox")
       "* TODO %i%? \n SCHEDULED: %t")
       ("T" "Tickler" entry
       (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
       "* TODO %i%? \n SCHEDULED: %T")
       ("M" "Todo with link" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Inbox")
       "* TODO %i%? \n SCHEDULED: %t \n :PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
       ("W" "Finnish word of the day" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Inbox")
       "* TODO Word of the day - %t \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
       ("d" "Daily review" entry (file+olp+datetree "~/Nextcloud/org/daily_reviews.org")
       (file "~/Nextcloud/org/templates/daily_review.org"))
@@ -1038,11 +1038,16 @@ For a better way to group entries in the agenda.
   ;; conflicts of header bindings with evil-mode
   (setq org-super-agenda-header-map nil)
   (setq org-super-agenda-groups
-       '((:auto-category t)
+       '(;;(:auto-category t)
+         (:auto-outline-path t)
          (:discard (:not  ; Is it easier to read like this?
                     (:and
                      (:todo "READING" :file-path "reading_list")))))))
 #+end_src
+
+#+RESULTS:
+: t
+
 *** Better? Linking
 #+begin_src elisp
 (use-package org-super-links
@@ -1363,6 +1368,10 @@ A more minimal completion framework
   :straight t
   :init
   (ivy-rich-mode 1))
+
+(use-package all-the-icons-ivy-rich
+  :straight t
+  :init (all-the-icons-ivy-rich-mode 1))
 #+end_src
 ** Company
 Complete all the things!
