More org-roam-dailies capture templates

--- a/init.org
+++ b/init.org
@@ -2208,6 +2208,10 @@ Hacky hacky hacky
          :unnarrowed t)))
   (setq org-roam-dailies-capture-templates
       '(("d" "default" entry
+         "* Daily\n** Inbox\n** Today\n** Todos\n %?"
+         :if-new (file+head "notes.daily.%<%Y-%m-%d>.org"
+                            "#+title: %<%Y-%m-%d>\n"))
+         ("j" "journal" entry
          "* %<%H:%M> %?"
          :if-new (file+head "journal.daily.%<%Y-%m-%d>.org"
                             "#+title: %<%Y-%m-%d>\n"))))
@@ -2241,3 +2245,5 @@ Hacky hacky hacky
 
 (my/org-roam-load)
 #+end_src
+
+#+RESULTS:
