--- a/init.org
+++ b/init.org
@@ -79,6 +79,7 @@ Calling EMACS an editor is like calling the Earth a hunk of dirt.
     - [[#org-recur][Org recur]]
     - [[#searching-through-org-files][Searching through org files]]
     - [[#dendroam][Dendroam]]
+    - [[#org-brain][Org brain]]
   - [[#evil-mode][Evil-mode]]
     - [[#evil-mode-configs][Evil mode configs]]
     - [[#org-mode-integration-with-evil][Org mode integration with evil]]
@@ -1191,6 +1192,43 @@ For simpler presentation in org files
   :straight (:host github :repo "vicrdguez/dendroam" :branch "main")
   :after org)
 #+end_src
+*** Org brain
+#+begin_src elisp
+;; Allows you to edit entries directly from org-brain-visualize
+(use-package polymode
+  :straight t
+  :defer t)
+#+end_src
+
+#+RESULTS:
+: t
+
+#+begin_src elisp
+(use-package org-brain
+  :straight t
+  :init
+  (setq org-brain-path "~/Nextcloud/org/brain")
+  ;; For Evil users
+  (with-eval-after-load 'evil
+    (evil-set-initial-state 'org-brain-visualize-mode 'emacs))
+  :config
+  (bind-key "C-c b" 'org-brain-prefix-map org-mode-map)
+  (setq org-id-track-globally t)
+  (setq org-id-locations-file "~/.emacs.d/.org-id-locations")
+  (add-hook 'before-save-hook #'org-brain-ensure-ids-in-buffer)
+  (push '("b" "Brain" plain (function org-brain-goto-end)
+          "* %i%?" :empty-lines 1)
+        org-capture-templates)
+  (setq org-brain-visualize-default-choices 'all)
+  (setq org-brain-title-max-length 12)
+  (setq org-brain-include-file-entries nil
+        org-brain-file-entries-use-title nil)
+  (add-hook 'org-brain-visualize-mode-hook #'org-brain-polymode))
+#+end_src
+
+#+RESULTS:
+: t
+
 ** Evil-mode
 Vim keybinds and goodness in emacs
 
