--- a/init.org
+++ b/init.org
@@ -93,25 +93,6 @@ Calling EMACS an editor is like calling the Earth a hunk of dirt.
   - [[#company][Company]]
   - [[#how-do-you][How-do-you]]
   - [[#language-specific][Language-specific]]
-    - [[#web-mode][Web-mode]]
-    - [[#general-1][General]]
-    - [[#rust][Rust]]
-    - [[#glsl][GLSL]]
-    - [[#lua][Lua]]
-    - [[#ruby][Ruby]]
-    - [[#typescript][Typescript]]
-    - [[#scala][Scala]]
-    - [[#gdscript][GDScript]]
-    - [[#python][Python]]
-      - [[#poetry][Poetry]]
-    - [[#clojure][Clojure]]
-    - [[#nix][Nix]]
-    - [[#common-lisp][Common Lisp]]
-    - [[#zig][Zig]]
-    - [[#haskell][Haskell]]
-    - [[#elixir][Elixir]]
-    - [[#hy][Hy]]
-    - [[#fennel][Fennel]]
   - [[#parens][Parens]]
   - [[#flycheck][Flycheck]]
   - [[#emojify][Emojify]]
@@ -1437,291 +1418,24 @@ Your stack overflow and friends inside emacs (and the results are org files!)
     "q"  'howdoyou-query))
 #+end_src
 ** Language-specific
-*** Web-mode
-For different types of templates and web markups and the like
 #+begin_src elisp
-(use-package web-mode
-  :straight t
-  :hook (web-mode . emmet-mode)
-  :mode
-  ("\\.erb\\'" . web-mode)
-  ("\\.html?\\'" . web-mode)
-  :config
-  (setq web-mode-engines-alist '(("django" . "\\.html\\'"))))
-#+end_src
-
-Add emmet for tag completion and stuff
-
-#+begin_src elisp
-(use-package emmet-mode
-  :straight t)
-#+end_src
-
-Impatient mode for live preview of html
-#+begin_src elisp
-(use-package impatient-mode
-  :straight t)
-#+end_src
-*** General
-For your general language needs.
-#+begin_src elisp
-(use-package lsp-mode
-  :straight t
-  :custom
-  (lsp-rust-server 'rust-analyzer)
-  (lsp-rust-analyzer-server-command "/usr/bin/rust-analyzer")
-  :hook
-  (rust-mode     . lsp)
-  (ruby-mode     . lsp)
-  (gdscript-mode . lsp)
-  (scala-mode    . lsp)
-  :commands lsp
-  :config
-  (advice-add 'lsp :before #'direnv-update-environment))
-
-(defun lsp--gdscript-ignore-errors (original-function &rest args)
-  "Ignore the error message resulting from Godot not replying to the `JSONRPC' request."
-  (if (string-equal major-mode "gdscript-mode")
-      (let ((json-data (nth 0 args)))
-        (if (and (string= (gethash "jsonrpc" json-data "") "2.0")
-                 (not (gethash "id" json-data nil))
-                 (not (gethash "method" json-data nil)))
-            nil ; (message "Method not found")
-          (apply original-function args)))
-    (apply original-function args)))
-
-;; Runs the function `lsp--gdscript-ignore-errors` around `lsp--get-message-type` to suppress unknown notification errors.
-(advice-add #'lsp--get-message-type :around #'lsp--gdscript-ignore-errors)
-#+end_src
-*** Rust
-#+begin_src elisp
-(use-package rust-mode
-  :straight t
-  :config
-  (setq rust-format-on-save t))
-#+end_src
-*** GLSL
-For those pesky shaders.
-#+begin_src elisp
-(use-package glsl-mode
-  :straight t)
-#+end_src
-*** Lua
-#+begin_src elisp
-(use-package lua-mode
-  :straight t
-  :config
-  (setq lua-indent-level 2))
-
-(use-package love-minor-mode
-  :straight t
-  :hook (lua-mode . love-minor-mode)
-  :config
-  (setq love-exe "/usr/bin/love"))
-#+end_src
-*** Ruby
-#+begin_src elisp
-(use-package projectile-rails
-  :straight t
-  :config
-  (projectile-rails-global-mode))
-#+end_src
-*** Typescript
-#+begin_src elisp
-(use-package typescript-mode
-  :straight t
-  :mode
-  ("\\.ts\\'" . typescript-mode))
-
-(use-package tide
-  :straight t
-  :after (typescript-mode company)
-  :hook ((typescript-mode . tide-setup)
-         (typescript-mode . tide-hl-identifier-mode)
-         (before-save . tide-format-before-save)))
-#+end_src
-*** Scala
-#+begin_src elisp
-(use-package scala-mode
-  :straight t
-  :mode "\\.s\\(cala\\|bt\\)$"
-  :config
-  (load-file (concat user-emacs-directory "/lisp/ob-scala.el"))) ;; for org babel evaluating of scala code blocks
-
-(use-package lsp-metals
-  :straight t
-  :defer t
-  :config (setq lsp-metals-treeview-show-when-views-received t))
-#+end_src
-
-SBT
-#+begin_src elisp
-(use-package sbt-mode
-  :straight t
-  :commands sbt-start sbt-command
-  :config
-  ;; WORKAROUND: allows using SPACE when in the minibuffer
-  (substitute-key-definition
-   'minibuffer-complete-word
-   'self-insert-command
-   minibuffer-local-completion-map))
-#+end_src
-
-Ammonite
-#+begin_src elisp
-(use-package ob-ammonite
-  :straight t
-  :config
-  (setq ammonite-term-repl-auto-detect-predef-file nil)
-  (setq ammonite-term-repl-program-args '("--no-default-predef" "--no-home-predef")))
-#+end_src
-*** GDScript
-#+begin_src elisp
-(use-package gdscript-mode
-  :ensure-system-package godot
-  :straight
-  (gdscript-mode
-     :type git
-     :host github
-     :repo "GDQuest/emacs-gdscript-mode")
-  :defer t)
-#+end_src
-*** Python
-#+begin_src elisp
-(defun my/python-mode-hook ()
-  (add-to-list 'company-backends 'company-jedi))
-
-(use-package company-jedi
-  :straight t
-  :hook ((python-mode . jedi:setup)
-         (python-mode . my/python-mode-hook)))
-
-(use-package virtualenvwrapper
-  :straight t
-  :defer t
-  :init
-  (venv-initialize-interactive-shells)
-  (venv-initialize-eshell))
-
-(my/language-leader-def
-  "p" '(:ignore t :which-key "python")
-  "pf" 'elpy-autopep8-fix-code)
-#+end_src
-
-**** Poetry
-#+begin_src elisp
-(use-package poetry
-  :straight t)
-#+end_src
-*** Clojure
-#+begin_src elisp
+(require 'web)
+;;(require 'rust)
+;;(require 'glsl)
+(require 'lua)
+;;(require 'ruby)
+;;(require 'typescript)
+;;(require 'scala)
+;;(require 'gdscript)
+(require 'python)
 ;;(require 'clojure)
+(require 'nix)
+;;(require 'common-lisp)
+;;(require 'zig)
+;;(require 'haskell)
+;;(require 'elixir)
+(require 'lsp)
 #+end_src
-*** Nix
-#+begin_src elisp
-(use-package nix-mode
-  :straight t)
-#+end_src
-*** Common Lisp
-#+begin_src elisp
-(use-package slime
-  :straight t)
-#+end_src
-*** Zig
-#+begin_src elisp
-(use-package zig-mode
-  :straight t)
-#+end_src
-
-*** Haskell
-#+begin_src elisp
-(use-package haskell-mode
-  :straight t
-  :config
-  (add-hook 'haskell-mode-hook
-          (lambda ()
-            (set (make-local-variable 'company-backends)
-                 (append '((company-capf company-dabbrev-code))
-                         company-backends))))
-  (setq haskell-stylish-on-save t)
-
- ;; This changes the evil "O" and "o" keys for haskell-mode to make sure that
- ;; indentation is done correctly. See
- ;; https://github.com/haskell/haskell-mode/issues/1265#issuecomment-252492026.
-  (defun haskell-evil-open-above ()
-    (interactive)
-    (evil-digit-argument-or-evil-beginning-of-line)
-    (haskell-indentation-newline-and-indent)
-    (evil-previous-line)
-    (haskell-indentation-indent-line)
-    (evil-append-line nil))
-
-  (defun haskell-evil-open-below ()
-    (interactive)
-    (evil-append-line nil)
-    (haskell-indentation-newline-and-indent))
-
-  (evil-define-key 'normal haskell-mode-map
-    "o" 'haskell-evil-open-below
-    "O" 'haskell-evil-open-above))
-
-;; (use-package lsp-haskell
-;;   :straight t
-;;   :config
-;;   (add-hook 'haskell-mode-hook
-;;             (lambda ()
-;;               (lsp)
-;;               (setq evil-shift-width 2)))
-;;   (add-hook 'haskell-mode-hook #'lsp)
-;;   (add-hook 'haskell-literate-mode-hook #'lsp))
-
-(use-package lsp-ui
-  :straight t
-  :hook (prog-mode . lsp-ui-mode)
-  :config
-  ;;(evil-leader/set-key "x m" #'lsp-ui-imenu)
-  (setq lsp-ui-doc-position 'bottom))
-#+end_src
-
-*** Elixir
-Elixir mode for basic interactions
-#+begin_src elisp
-(use-package elixir-mode
-  :straight t)
-#+end_src
-
-Alchemist
-#+begin_src elisp
-(use-package alchemist
-  :straight t)
-#+end_src
-
-Interaction with mix
-#+begin_src elisp
-(use-package mix
-  :straight t)
-#+end_src
-
-*** Hy
-#+begin_src elisp
-(use-package hy-mode
-  :straight t)
-#+end_src
-*** Fennel
-Does not work for some reason
-#+begin_src elisp
-;;(use-package fennel-mode
-;;  :straight t)
-#+end_src
-
-#+begin_src elisp
-(autoload 'fennel-mode (concat user-emacs-directory "lisp/fennel-mode/fennel-mode") nil t)
-  (add-to-list 'auto-mode-alist '("\\.fnl\\'" . fennel-mode))
-#+end_src
-
-#+RESULTS:
-: ((\.envrc\' . direnv-envrc-mode) (\.journal\' . ledger-mode) (\.dat\' . ledger-mode) (\.ledger\' . ledger-mode) (\.fnl\' . fennel-mode) (\.hy\' . hy-mode) (\.exs\' . elixir-mode) (\.ex\' . elixir-mode) (\.elixir\' . elixir-mode) (\.hsc\' . haskell-mode) (\.l[gh]s\' . haskell-literate-mode) (\.hsig\' . haskell-mode) (\.[gh]s\' . haskell-mode) (\.cabal\'\|/cabal\.project\|/\.cabal/config\' . haskell-cabal-mode) (\.chs\' . haskell-c2hs-mode) (\.ghci\' . ghci-script-mode) (\.dump-simpl\' . ghc-core-mode) (\.hcr\' . ghc-core-mode) (\.zig\' . zig-mode) (\.nix\' . nix-mode) (\`/nix/store/.+\.drv\' . nix-drv-mode) (\(?:build\|profile\)\.boot\' . clojure-mode) (\.cljs\' . clojurescript-mode) (\.cljc\' . clojurec-mode) (\.\(clj\|dtm\|edn\)\' . clojure-mode) (\.tres\' . conf-toml-mode) (\.tscn\' . conf-toml-mode) (\.gd\' . gdscript-mode) (\.s\(cala\|bt\)$ . scala-mode) (\.\(scala\|sbt\|worksheet\.sc\)\' . scala-mode) (\.ts\' . typescript-mode) (\.lua\' . lua-mode) (\.glsl\' . glsl-mode) (\.geom\' . glsl-mode) (\.frag\' . glsl-mode) (\.vert\' . glsl-mode) (\.rs\' . rust-mode) (\.\(?:md\|markdown\|mkd\|mdown\|mkdn\|mdwn\)\' . markdown-mode) (\.html?\' . web-mode) (\.erb\' . web-mode) (/git-rebase-todo\' . git-rebase-mode) (\.odc\' . archive-mode) (\.odf\' . archive-mode) (\.odi\' . archive-mode) (\.otp\' . archive-mode) (\.odp\' . archive-mode) (\.otg\' . archive-mode) (\.odg\' . archive-mode) (\.ots\' . archive-mode) (\.ods\' . archive-mode) (\.odm\' . archive-mode) (\.ott\' . archive-mode) (\.odt\' . archive-mode) (\.org_archive\' . org-mode) (\.gpg\(~\|\.~[0-9]+~\)?\' nil epa-file) (\.elc\' . elisp-byte-code-mode) (\.zst\' nil jka-compr) (\.dz\' nil jka-compr) (\.xz\' nil jka-compr) (\.lzma\' nil jka-compr) (\.lz\' nil jka-compr) (\.g?z\' nil jka-compr) (\.bz2\' nil jka-compr) (\.Z\' nil jka-compr) (\.vr[hi]?\' . vera-mode) (\(?:\.\(?:rbw?\|ru\|rake\|thor\|jbuilder\|rabl\|gemspec\|podspec\)\|/\(?:Gem\|Rake\|Cap\|Thor\|Puppet\|Berks\|Vagrant\|Guard\|Pod\)file\)\' . ruby-mode) (\.re?st\' . rst-mode) (\.py[iw]?\' . python-mode) (\.m\' . octave-maybe-mode) (\.less\' . less-css-mode) (\.scss\' . scss-mode) (\.awk\' . awk-mode) (\.\(u?lpc\|pike\|pmod\(\.in\)?\)\' . pike-mode) (\.idl\' . idl-mode) (\.java\' . java-mode) (\.m\' . objc-mode) (\.ii\' . c++-mode) (\.i\' . c-mode) (\.lex\' . c-mode) (\.y\(acc\)?\' . c-mode) (\.h\' . c-or-c++-mode) (\.c\' . c-mode) (\.\(CC?\|HH?\)\' . c++-mode) (\.[ch]\(pp\|xx\|\+\+\)\' . c++-mode) (\.\(cc\|hh\)\' . c++-mode) (\.\(bat\|cmd\)\' . bat-mode) (\.[sx]?html?\(\.[a-zA-Z_]+\)?\' . mhtml-mode) (\.svgz?\' . image-mode) (\.svgz?\' . xml-mode) (\.x[bp]m\' . image-mode) (\.x[bp]m\' . c-mode) (\.p[bpgn]m\' . image-mode) (\.tiff?\' . image-mode) (\.gif\' . image-mode) (\.png\' . image-mode) (\.jpe?g\' . image-mode) (\.te?xt\' . text-mode) (\.[tT]e[xX]\' . tex-mode) (\.ins\' . tex-mode) (\.ltx\' . latex-mode) (\.dtx\' . doctex-mode) (\.org\' . org-mode) (\.el\' . emacs-lisp-mode) (Project\.ede\' . emacs-lisp-mode) (\.\(scm\|stk\|ss\|sch\)\' . scheme-mode) (\.l\' . lisp-mode) (\.li?sp\' . lisp-mode) (\.[fF]\' . fortran-mode) (\.for\' . fortran-mode) (\.p\' . pascal-mode) (\.pas\' . pascal-mode) (\.\(dpr\|DPR\)\' . delphi-mode) (\.ad[abs]\' . ada-mode) (\.ad[bs]\.dg\' . ada-mode) (\.\([pP]\([Llm]\|erl\|od\)\|al\)\' . perl-mode) (Imakefile\' . makefile-imake-mode) (Makeppfile\(?:\.mk\)?\' . makefile-makepp-mode) (\.makepp\' . makefile-makepp-mode) (\.mk\' . makefile-gmake-mode) (\.make\' . makefile-gmake-mode) ([Mm]akefile\' . makefile-gmake-mode) (\.am\' . makefile-automake-mode) (\.texinfo\' . texinfo-mode) (\.te?xi\' . texinfo-mode) (\.[sS]\' . asm-mode) (\.asm\' . asm-mode) (\.css\' . css-mode) (\.mixal\' . mixal-mode) (\.gcov\' . compilation-mode) (/\.[a-z0-9-]*gdbinit . gdb-script-mode) (-gdb\.gdb . gdb-script-mode) ([cC]hange\.?[lL]og?\' . change-log-mode) ([cC]hange[lL]og[-.][0-9]+\' . change-log-mode) (\$CHANGE_LOG\$\.TXT . change-log-mode) (\.scm\.[0-9]*\' . scheme-mode) (\.[ckz]?sh\'\|\.shar\'\|/\.z?profile\' . sh-mode) (\.bash\' . sh-mode) (\(/\|\`\)\.\(bash_\(profile\|history\|log\(in\|out\)\)\|z?log\(in\|out\)\)\' . sh-mode) (\(/\|\`\)\.\(shrc\|zshrc\|m?kshrc\|bashrc\|t?cshrc\|esrc\)\' . sh-mode) (\(/\|\`\)\.\([kz]shenv\|xinitrc\|startxrc\|xsession\)\' . sh-mode) (\.m?spec\' . sh-mode) (\.m[mes]\' . nroff-mode) (\.man\' . nroff-mode) (\.sty\' . latex-mode) (\.cl[so]\' . latex-mode) (\.bbl\' . latex-mode) (\.bib\' . bibtex-mode) (\.bst\' . bibtex-style-mode) (\.sql\' . sql-mode) (\(acinclude\|aclocal\|acsite\)\.m4\' . autoconf-mode) (\.m[4c]\' . m4-mode) (\.mf\' . metafont-mode) (\.mp\' . metapost-mode) (\.vhdl?\' . vhdl-mode) (\.article\' . text-mode) (\.letter\' . text-mode) (\.i?tcl\' . tcl-mode) (\.exp\' . tcl-mode) (\.itk\' . tcl-mode) (\.icn\' . icon-mode) (\.sim\' . simula-mode) (\.mss\' . scribe-mode) (\.f9[05]\' . f90-mode) (\.f0[38]\' . f90-mode) (\.indent\.pro\' . fundamental-mode) (\.\(pro\|PRO\)\' . idlwave-mode) (\.srt\' . srecode-template-mode) (\.prolog\' . prolog-mode) (\.tar\' . tar-mode) (\.\(arc\|zip\|lzh\|lha\|zoo\|[jew]ar\|xpi\|rar\|cbr\|7z\|ARC\|ZIP\|LZH\|LHA\|ZOO\|[JEW]AR\|XPI\|RAR\|CBR\|7Z\)\' . archive-mode) (\.oxt\' . archive-mode) (\.\(deb\|[oi]pk\)\' . archive-mode) (\`/tmp/Re . text-mode) (/Message[0-9]*\' . text-mode) (\`/tmp/fol/ . text-mode) (\.oak\' . scheme-mode) (\.sgml?\' . sgml-mode) (\.x[ms]l\' . xml-mode) (\.dbk\' . xml-mode) (\.dtd\' . sgml-mode) (\.ds\(ss\)?l\' . dsssl-mode) (\.js[mx]?\' . javascript-mode) (\.har\' . javascript-mode) (\.json\' . javascript-mode) (\.[ds]?va?h?\' . verilog-mode) (\.by\' . bovine-grammar-mode) (\.wy\' . wisent-grammar-mode) ([:/\]\..*\(emacs\|gnus\|viper\)\' . emacs-lisp-mode) (\`\..*emacs\' . emacs-lisp-mode) ([:/]_emacs\' . emacs-lisp-mode) (/crontab\.X*[0-9]+\' . shell-script-mode) (\.ml\' . lisp-mode) (\.ld[si]?\' . ld-script-mode) (ld\.?script\' . ld-script-mode) (\.xs\' . c-mode) (\.x[abdsru]?[cnw]?\' . ld-script-mode) (\.zone\' . dns-mode) (\.soa\' . dns-mode) (\.asd\' . lisp-mode) (\.\(asn\|mib\|smi\)\' . snmp-mode) (\.\(as\|mi\|sm\)2\' . snmpv2-mode) (\.\(diffs?\|patch\|rej\)\' . diff-mode) (\.\(dif\|pat\)\' . diff-mode) (\.[eE]?[pP][sS]\' . ps-mode) (\.\(?:PDF\|DVI\|OD[FGPST]\|DOCX\|XLSX?\|PPTX?\|pdf\|djvu\|dvi\|od[fgpst]\|docx\|xlsx?\|pptx?\)\' . doc-view-mode-maybe) (configure\.\(ac\|in\)\' . autoconf-mode) (\.s\(v\|iv\|ieve\)\' . sieve-mode) (BROWSE\' . ebrowse-tree-mode) (\.ebrowse\' . ebrowse-tree-mode) (#\*mail\* . mail-mode) (\.g\' . antlr-mode) (\.mod\' . m2-mode) (\.ses\' . ses-mode) (\.docbook\' . sgml-mode) (\.com\' . dcl-mode) (/config\.\(?:bat\|log\)\' . fundamental-mode) (/\.\(authinfo\|netrc\)\' . authinfo-mode) (\.\(?:[iI][nN][iI]\|[lL][sS][tT]\|[rR][eE][gG]\|[sS][yY][sS]\)\' . conf-mode) (\.la\' . conf-unix-mode) (\.ppd\' . conf-ppd-mode) (java.+\.conf\' . conf-javaprop-mode) (\.properties\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-javaprop-mode) (\.toml\' . conf-toml-mode) (\.desktop\' . conf-desktop-mode) (/\.redshift\.conf\' . conf-windows-mode) (\`/etc/\(?:DIR_COLORS\|ethers\|.?fstab\|.*hosts\|lesskey\|login\.?de\(?:fs\|vperm\)\|magic\|mtab\|pam\.d/.*\|permissions\(?:\.d/.+\)?\|protocols\|rpc\|services\)\' . conf-space-mode) (\`/etc/\(?:acpid?/.+\|aliases\(?:\.d/.+\)?\|default/.+\|group-?\|hosts\..+\|inittab\|ksysguarddrc\|opera6rc\|passwd-?\|shadow-?\|sysconfig/.+\)\' . conf-mode) ([cC]hange[lL]og[-.][-0-9a-z]+\' . change-log-mode) (/\.?\(?:gitconfig\|gnokiirc\|hgrc\|kde.*rc\|mime\.types\|wgetrc\)\' . conf-mode) (/\.\(?:asound\|enigma\|fetchmail\|gltron\|gtk\|hxplayer\|mairix\|mbsync\|msmtp\|net\|neverball\|nvidia-settings-\|offlineimap\|qt/.+\|realplayer\|reportbug\|rtorrent\.\|screen\|scummvm\|sversion\|sylpheed/.+\|xmp\)rc\' . conf-mode) (/\.\(?:gdbtkinit\|grip\|mpdconf\|notmuch-config\|orbital/.+txt\|rhosts\|tuxracer/options\)\' . conf-mode) (/\.?X\(?:default\|resource\|re\)s\> . conf-xdefaults-mode) (/X11.+app-defaults/\|\.ad\' . conf-xdefaults-mode) (/X11.+locale/.+/Compose\' . conf-colon-mode) (/X11.+locale/compose\.dir\' . conf-javaprop-mode) (\.~?[0-9]+\.[0-9][-.0-9]*~?\' nil t) (\.\(?:orig\|in\|[bB][aA][kK]\)\' nil t) ([/.]c\(?:on\)?f\(?:i?g\)?\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-mode-maybe) (\.[1-9]\' . nroff-mode) (\.art\' . image-mode) (\.avs\' . image-mode) (\.bmp\' . image-mode) (\.cmyk\' . image-mode) (\.cmyka\' . image-mode) (\.crw\' . image-mode) (\.dcr\' . image-mode) (\.dcx\' . image-mode) (\.dng\' . image-mode) (\.dpx\' . image-mode) (\.fax\' . image-mode) (\.hrz\' . image-mode) (\.icb\' . image-mode) (\.icc\' . image-mode) (\.icm\' . image-mode) (\.ico\' . image-mode) (\.icon\' . image-mode) (\.jbg\' . image-mode) (\.jbig\' . image-mode) (\.jng\' . image-mode) (\.jnx\' . image-mode) (\.miff\' . image-mode) (\.mng\' . image-mode) (\.mvg\' . image-mode) (\.otb\' . image-mode) (\.p7\' . image-mode) (\.pcx\' . image-mode) (\.pdb\' . image-mode) (\.pfa\' . image-mode) (\.pfb\' . image-mode) (\.picon\' . image-mode) (\.pict\' . image-mode) (\.rgb\' . image-mode) (\.rgba\' . image-mode) (\.tga\' . image-mode) (\.wbmp\' . image-mode) (\.webp\' . image-mode) (\.wmf\' . image-mode) (\.wpg\' . image-mode) (\.xcf\' . image-mode) (\.xmp\' . image-mode) (\.xwd\' . image-mode) (\.yuv\' . image-mode) (\.tgz\' . tar-mode) (\.tbz2?\' . tar-mode) (\.txz\' . tar-mode) (\.tzst\' . tar-mode))
-
 ** Parens
 To have paren pairs in the same colour
 #+begin_src elisp
