--- a/init.org
+++ b/init.org
@@ -54,7 +54,7 @@ Calling EMACS an editor is like calling the Earth a hunk of dirt.
   - [[#dashboard][Dashboard]]
   - [[#org-mode][Org-mode]]
     - [[#general][General]]
-    - [[#org-gtd][Org gtd]]
+    - [[#org-gtd][Org-gtd]]
     - [[#capture-templates][Capture templates]]
     - [[#agenda][Agenda]]
     - [[#org-edna][Org-edna]]
@@ -703,7 +703,7 @@ Disable line numbers in org-mode
 #+begin_src elisp
 (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode 0)))
 #+end_src
-*** Org gtd
+*** Org-gtd
 Define some paths as =org-gtd= variables are kinda wonky with when they load
 #+begin_src elisp
 (setq org-gtd-dir "~/Nextcloud/org/gtd")
@@ -916,6 +916,36 @@ The notes (zettelkasten) god
   (setq org-roam-v2-ack t)
   :config
   (setq org-roam-directory "~/Nextcloud/org-roam")
+  (setq org-roam-dailies-directory "daily/")
+  (setq org-roam-completion-everywhere t)
+
+  (setq org-roam-dailies-capture-templates
+      '(("d" "default" plain (file "~/Nextcloud/org/roam-templates/daily_note.org")
+         :if-new (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n#+filetags: daily"))))
+
+
+  (setq org-roam-capture-templates
+        '(("b" "book notes" plain
+           "\n* Source\n\nAuthor: %^{Author}\nTitle: ${title}\nYear: %^{Year}\n\n* Summary\n\n%?"
+           :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+           :unnarrowed t)
+
+          ("c" "video/article notes" plain
+           "\n* Source\n\nLink: %^{Link}\nTitle: ${title}\n\n* Fleeting Notes\n\n%?"
+           :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+           :unnarrowed t)
+
+          ("l" "literature note" plain
+           "\n* Notes\n\n* Resources\n\n%?"
+           :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n#+filetags: literature")
+           :unnarrowed t)
+
+          ("z" "zettel" plain
+           "\n* Title\n\n* See also\n\n%?"
+           :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+           :unnarrowed t)
+          ))
+
   (org-roam-db-autosync-mode)
   (my/leader-keys
     "nrr" 'org-roam-buffer-toggle
@@ -1390,6 +1420,12 @@ Being prescient and all
   :straight t
   :init
   (ivy-prescient-mode 1))
+#+end_src
+
+Integration with =clipmenu=
+#+begin_src elisp
+(use-package ivy-clipmenu
+  :straight t)
 #+end_src
 ** Company
 Complete all the things!
